--- a/meta-gram-real/Assets/Radial Progress/RadialProgress.uss
+++ b/meta-gram-real/Assets/Radial Progress/RadialProgress.uss
@@ -10,8 +10,8 @@
     margin-bottom: 5px;
     flex-direction: row;
     justify-content: center;
-    width: 60px;
-    height: 60px;
+    width: 150px;
+    height: 150px;
     color: rgb(56, 56, 56);
     left: auto;
     top: auto;
@@ -22,4 +22,5 @@
 .radial-progress__label {
     -unity-text-align: middle-center;
     color: rgb(0, 0, 0);
+    font-size: 32px;
 }
